[project]
name = "asyncsentry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle", email = "kylet21@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.2.2",
]

[project.scripts]
asyncsentry = "asyncsentry:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
